--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Home Page -->
-    <h1 class="text-3xl font-bold underline">
+    <h1 class="text-3xl text-gold font-bold underline">
         Welcome to my Art Studio
     </h1>
     <!-- Art and Heena Buttons -->
