home page complete

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,25 @@
 </head>
 <body>
     <!-- Home Page -->
-    <h1 class="text-3xl text-gold font-bold underline">
-        Welcome to my Art Studio
+    <h1 class="text-2xl text-gold font-bold truncate text-center sm:text-3xl">
+        <br> <p>Hi There!&#128075;</p> </br>
+        <br> <p>Welcome to my Art Studio&#128522;</p> </br>
+        <br> <p>What are you interested in?</p> </br>
     </h1>
-    <!-- Art and Heena Buttons -->
+    <!-- Art and Heena Buttons -->    
+<div class="text-center mt-6 sm:break-before-auto">
+    <button class="bg-white hover:bg-black mx-4 my-4 text-gold font-semibold border border-white rounded shadow">
+        <img src="/Calligraphy-logo.png" alt="Calligraphy Logo">
+        </button>
+
+        <button class="bg-white hover:bg-black mx-4 my-4 text-gold font-semibold border border-white rounded shadow">
+            <img src="/heenalogo.png" alt="Calligraphy Logo">
+        </button>
+</div>
 
     <!-- 3aaisha Calligraphy -->
+    <div>
+        <h1>3aaisha Calligraphy</h1>
     <!-- Nav Bar -->
 
     <!-- Home -->
@@ -24,6 +37,8 @@
     <!-- Art Display -->
 
     <!-- Contact -->
+    </div>
+
 
     <!-- Heena Royal -->
     <!-- Nav Bar -->
