--- a/src/index.html
+++ b/src/index.html
@@ -6,32 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3aaisha Studio</title>
     <link href="/dist/output.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Home Page -->
-<div class="sliding">
-    <h1 class="text-2xl text-gold font-extrabold text-center sm:text-3xl">
-        <br> <p>Hi There!&#128075;</p> </br>
-        <br> <p>Welcome to my Art Studio&#128522;</p> </br>
-        <br> <p>What are you interested in?</p> </br>
-    </h1>
-
-    <!-- Art and Heena Buttons -->    
-    <div class="text-center mt-6 sm:break-before-auto">
-    <a href="calligraphy.html">
-        <button class="bg-white hover:bg-black mx-4 my-4 text-gold font-semibold border border-white rounded shadow">
-            <img src="/Calligraphy-logo.png" alt="Calligraphy Logo">
-        </button>
-    </a>
-    <a href="heena.html">
-        <button class="bg-white hover:bg-black mx-4 my-4 text-gold font-semibold border border-white rounded shadow">
-            <img src="/heenalogo.png" alt="Calligraphy Logo">
-        </button>
-    </a>
+<header>
+    <div class="sliding">
+        <h1 class="text-2xl text-gold font-extrabold text-center sm:text-3xl">
+            <br> <p>Hi There!&#128075;</p> </br>
+            <br> <p>Welcome to my Art Studio&#128522;</p> </br>
+            <br> <p>What are you interested in?</p> </br>
+        </h1>
+    
+        <!-- Art and Heena Buttons -->    
+        <div class="text-center mt-6 sm:break-before-auto">
+        <a href="/calligraphy.html">
+            <button class="bg-white hover:bg-black mx-4 my-4 text-gold font-semibold border border-white rounded shadow">
+                <img src="/Calligraphy-logo.png" alt="Calligraphy Logo">
+            </button>
+        </a>
+        <a href="/heena.html">
+            <button class="bg-white hover:bg-black mx-4 my-4 text-gold font-semibold border border-white rounded shadow">
+                <img src="/heenalogo.png" alt="Calligraphy Logo">
+            </button>
+        </a>
+        </div>
     </div>
-</div>
+</header>
 
-
+<!-- Footer -->
 <div id="footer">
     <br> </br> 
     <footer class="text-gold text-center">&copy; 2023 
