--- a/src/calligraphy.html
+++ b/src/calligraphy.html
@@ -28,17 +28,42 @@
                 <!-- Menu -->
                 <div class="menu text-gold">
                     <ul class="flex">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="/src/index.html">Home Page</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#samples">Art Samples</a></li>
+                        <li><a href="#contact">Contact Us</a></li>
+                        <li><a href="/src/heena.html">Heena Royal</a></li>
                     </ul>
-                    <h1 class="text-2xl flex text-gold font-extrabold text-center sm:text-3xl"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa assumenda modi saepe ab vitae quam, ducimus illum odio id ipsam repellendus quaerat adipisci officiis minima officia expedita fugiat quibusdam ipsa?</h1>
-                </div>
-                
+                </div>   
             </nav>
         </div>
     </header>
+
+    <!-- Hero Page -->
+
+    <div class="heropage text-gold text-center">
+        <h2 class="text-3xl font-bold"> Welcome To Heena Royal!</h2>
+        <h4 class="text-center text-lg my-5 mx-20">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero commodi magni odit, placeat laborum quasi sed ex illo ipsam labore.
+        </h4>
+    </div>
+
+    <!-- Art Samples -->
+    <section id="samples">
+        <div class="text-gold text-center">
+            <h2 class="text-3xl font-bold">Some Of My Art Work</h2>
+        </div>
+        <div class="samples flex flex-wrap">
+            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/300">
+        </div>
+    </section>
 
     <!-- Contact -->
 <br>
@@ -61,6 +86,6 @@
                 <img src="/MY LOGOS (2).png" alt="creator"> 
             </footer>
         </div>
-    <script src="src/app.js"></script>
+    <script src="/src/app.js"></script>
 </body>
 </html>
