--- a/src/index.html
+++ b/src/index.html
@@ -22,12 +22,12 @@
     
         <!-- Art and Heena Buttons -->    
         <div class="text-center mt-6 sm:break-before-auto">
-        <a href="/calligraphy.html">
+        <a href="/src/calligraphy.html">
             <button class="bg-white hover:bg-black mx-4 my-4 text-gold font-semibold border border-white rounded shadow">
                 <img src="/Calligraphy-logo.png" alt="Calligraphy Logo">
             </button>
         </a>
-        <a href="/heena.html">
+        <a href="/src/heena.html">
             <button class="bg-white hover:bg-black mx-4 my-4 text-gold font-semibold border border-white rounded shadow">
                 <img src="/heenalogo.png" alt="Calligraphy Logo">
             </button>
