--- a/src/heena.html
+++ b/src/heena.html
@@ -42,6 +42,22 @@
             
 </header>
 
+    <!-- Art Samples -->
+    <section id="samples">
+        <div class="text-gold text-center">
+            <h2 class="text-3xl font-bold">Some Of My Art Work</h2>
+        </div>
+        <div class="samples flex flex-wrap">
+            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/300">
+        </div>
+    </section>
     <!-- Contact -->
     <br>
     <div id="contact">
@@ -63,6 +79,6 @@
         </footer>
     </div>
 
-<script src="src/app.js"></script>
+<script src="/src/app.js"></script>
 </body>
 </html>
