Calligraphy images responsive

--- a/src/calligraphy.html
+++ b/src/calligraphy.html
@@ -49,20 +49,24 @@
     </div>
 
     <!-- Art Samples -->
-    <section id="samples">
-        <div class="text-gold text-center">
-            <h2 class="text-3xl font-bold">Some Of My Art Work</h2>
+    <div class="text-gold text-center">
+        <h2 class="text-3xl text-center font-bold">Some Of My Art Work</h2>
+    </div>
+    <section class="samples">
+        <div class="dream">
+            <img src="/c8.jpeg">
+            <img src="/c2.jpeg">
+            <img src="/c3.jpeg">
+            <img src="/c4.jpeg">
         </div>
-        <div class="samples flex flex-wrap">
-            <img src="https://picsum.photos/300">
-            <img src="https://picsum.photos/300">
-            <img src="https://picsum.photos/300">
-            <img src="https://picsum.photos/300">
-            <img src="https://picsum.photos/300">
-            <img src="https://picsum.photos/300">
-            <img src="https://picsum.photos/300">
-            <img src="https://picsum.photos/300">
+
+        <div class="dream">
+            <img src="/c5.jpeg">
+            <img src="/c6.jpeg">
+            <img src="/c7.jpeg">
+            <img src="/c1.jpeg">
         </div>
+
     </section>
 
     <!-- Contact -->
