--- a/src/heena.html
+++ b/src/heena.html
@@ -43,21 +43,20 @@
 </header>
 
     <!-- Art Samples -->
-    <section id="samples">
         <div class="text-gold text-center">
-            <h2 class="text-3xl font-bold">Some Of My Art Work</h2>
+            <h2 class="text-3xl text-center font-bold">Some Of My Art Work</h2>
         </div>
-        <div class="samples flex flex-wrap">
-            <img src="https://picsum.photos/300">
-            <img src="https://picsum.photos/300">
-            <img src="https://picsum.photos/300">
-            <img src="https://picsum.photos/300">
-            <img src="https://picsum.photos/300">
-            <img src="https://picsum.photos/300">
-            <img src="https://picsum.photos/300">
-            <img src="https://picsum.photos/300">
-        </div>
-    </section>
+        <section class="samples">
+            <div class="heena">
+                <img src="/heena1.jpeg">
+                <img src="/heena2.jpeg">
+                <img src="/heena3.jpeg">
+                <img src="/heena4.jpeg">
+                <img src="/heena5.jpeg">
+            </div>
+    
+        </section>
+
     <!-- Contact -->
     <br>
     <div id="contact">
