--- a/src/calligraphy.html
+++ b/src/calligraphy.html
@@ -48,17 +48,17 @@
 
     <div class="row">
         <div class="section-title text-center text-gold">
-            <h1>Art By Aisha</h1>
+            <h1 class="text-3xl font-extrabold mt-10">Art By Aisha</h1>
         </div>
     </div>
 
     <div class="row">
-        <div class="filter-buttons text-gold">
+        <div class="filter-buttons text-gold text-xl">
             <ul id="filter-btns">
                 <li class="active" data-target="all">All</li>
                 <li data-target="calligraphy">Calligraphy</li>
                 <li data-target="henna">Henna</li>
-                <li data-target="about">About</li>
+                <li> <a href="/src/index.html">About</a></li>
             </ul>
         </div>
     </div>
@@ -66,17 +66,17 @@
 
         <!-- Hero Page -->
 
-        <div class="heropage text-gold text-center">
+        <!-- <div class="heropage text-gold text-center">
             <h2 class="text-3xl font-bold"> Welcome To Heena Royal!</h2>
             <h4 class="text-center text-lg my-5 mx-20">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero commodi magni odit, placeat laborum quasi sed ex illo ipsam labore.
             </h4>
-        </div>
+        </div> -->
     
         <!-- Art Samples -->
-        <div class="text-gold text-center">
+        <!-- <div class="text-gold text-center">
             <h2 class="text-3xl text-center font-bold">Some Of My Art Work</h2>
-        </div>
+        </div> -->
         <section class="samples">
             <div class="dream" data-id="calligraphy">
                 <img src="/c8.jpeg">
@@ -96,6 +96,9 @@
                 <img src="/heena1.jpeg">
                 <img src="/heena2.jpeg">
                 <img src="/heena3.jpeg">
+            </div>
+
+            <div class="dream" data-id="henna">
                 <img src="/heena4.jpeg">
                 <img src="/heena5.jpeg">
             </div>
