--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <li class="active" data-target="all">All</li>
                 <li data-target="calligraphy">Calligraphy</li>
                 <li data-target="henna">Henna</li>
-                <li> <a href="/src/index.html">About</a></li>
+                <li> <a href="/src/about.html">About</a></li>
             </ul>
         </div>
     </div>
