--- a/src/about.html
+++ b/src/about.html
@@ -15,7 +15,7 @@
     <!-- Home Page -->
 <header>
     <div class="back text-gold mt-5 ml-5">
-        <button class="bg-gold text-black font-semibold"><a href="/src/calligraphy.html">Go Back</a></button>
+        <button class="bg-gold text-black font-semibold"><a href="/index.html">Go Back</a></button>
     </div>
     <div class="sliding">
         <h1 class="text-2xl text-gold font-extrabold text-center sm:text-3xl">
